# grc_devboard_apps

./: README.md  Specification.md  readme.md
components/mic_reader/: CMakeLists.txt  Kconfig.projbuild  def.h  i2s_rx_slot.cpp  i2s_rx_slot.h  mic_proc.h  mic_reader.cpp  mic_reader.h
components/nn_model/: CMakeLists.txt  nn_model.cpp  nn_model.h  tensor_arena.h
components/nn_model/audio_preprocessor/: audio_preprocessor.cpp  audio_preprocessor.h
main/: CMakeLists.txt  Kconfig.projbuild  git_version.h  utils.h
main/App/: App.cpp  Event.cpp  Status.cpp
main/App/include/: App.hpp  Event.hpp  IDisplay.hpp  State.hpp  Status.hpp
main/Hardware/: DisplaySTDOUT.hpp  Lcd.cpp  Lcd.hpp
main/VoiceMsgPlayer/: I2sTx.cpp  I2sTx.hpp  Types.hpp  VoiceMsgPlayer.cpp  VoiceMsgPlayer.hpp  WavPlayer.cpp
main/ai_teacher/: ObjectsRecognition.cpp  ObjectsRecognition.h  bitmaps.cpp  bitmaps.h  objects_table.h  other_samples.cpp  samples.h  sound_objects_samples.cpp
main/ai_teacher/eng/: eng_samples.h  models.h  numbers_model.cpp  objects_model.cpp  objects_table.cpp  ref_numbers_samples.cpp  ref_objects_samples.cpp  voice_msg_samples.cpp
main/kws/: kws_event_task.cpp  kws_event_task.h  kws_task.cpp  kws_task.h  vad_task.cpp  vad_task.h
main/sed/: SED.cpp  baby_cry_model.cpp  bark_model.cpp  coughing_model.cpp  glass_breaking_model.cpp  models.h  sed_task.cpp
main/voice_relay/: VoiceRelay.cpp  model.cpp  model.h
